--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,23 @@
+/* common */
 .test {
     color: crimson;
 }
 
+/* header */
 header {
-    height: 200px;
+    height: 150px;
+    width: 100%;
     background-image: url("../img/pattern.png");
+    background-color: deepskyblue;
+    position: relative;
 }
+
+.logo {
+    height: 50px;
+    position: absolute;
+    bottom: 20px;
+    left: 5px;
+}
+
+/* Main */
+
