--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-/* common */
-.test {
-    color: crimson;
-}
 
 /* header */
 header {
@@ -23,4 +19,16 @@ header {
 
 h1 {
     font-size: 50px;
+}
+
+.testo-piccolo {
+    font-size: 12px;
+}
+
+.grigio {
+    color:gray
+}
+
+.turchese {
+    color: darkturquoise;
 }
