--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
     font-size: 18px;
 }
 
+.bianco
+{
+    color: white;
+}
 
 .grassetto {
     font-weight: bold;
@@ -38,7 +42,6 @@
 
 /* header */
 header {
-    margin: 0px;
     height: 150px;
     width: 100%;
     background-image: url("../img/pattern.png");
@@ -75,3 +78,18 @@ table {
 
 /* Footer */
 
+.footer-img1 {
+    display: block;
+    background-image: url(../img/monitor.jpg);
+    width: 200px;
+    height: 150px;
+    background-size: cover;
+}
+
+.footer-img2 {
+    display: block;
+    background-image: url(../img/graph.jpg);
+    width: 200px;
+    height: 150px;
+    background-size: cover;
+}
