--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,11 @@
 }
 
 .sfondo-turchese{
-    background-color: turquoise;
+    background-color: #b1e5f2;
 }
 
 .sfondo-blu {
-    background-color: blue;
+    background-color: #20a9e5;
 }
 
 .bianco {
@@ -68,6 +68,10 @@ h1 {
 
 table {
     border-collapse: collapse;
+}
+
+th {
+    text-align: left;
 }
 
 .cella-piccola {
