--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -2,15 +2,23 @@
     text-align: center;
 }
 
-.container-body {
-    width: 50%;
-    margin: auto;
-    background-color: rgba(0, 0, 0, 0.7)
+.testo12 {
+    font-size: 12px;
+}
+
+.testo18 {
+    font-size: 18px;
+}
+
+.grassetto {
+    font-weight: bold;
 }
 
 body {
     background-image: url(https://us.123rf.com/450wm/krekdm/krekdm1607/krekdm160700358/61905873-naadloze-lijn-patroon-kan-worden-gebruikt-voor-behang-website-achtergrond-textieldruk-modern-monochr.jpg?ver=6);
     background-repeat: repeat;
+    width: 75%;
+    margin: auto;
 }
 
 header {
@@ -23,5 +31,76 @@ header > img {
     margin: auto;
 }
 
-/* Main */
-.container-main
+main {
+    width: 75%;
+    margin: auto;
+    background-color: rgba(0, 0, 0, 0.85);
+    border-radius: 50px;
+    padding: 5px;
+}
+
+main img {
+    display: block;
+    height: 200px;
+    width: 300px;
+    border-radius: 50%;
+    margin: auto;
+}
+
+h1 {
+    font-family: 'Great Vibes', cursive;
+    font-size: 32px;
+}
+
+p, h1, h3 {
+    color: teal;
+}
+
+.azzurro-chiaro {
+    color: #4fbbea;
+}
+
+li {
+    color: teal;
+}
+
+table{
+    color: teal;
+}
+
+footer {
+    width: 25%;
+    margin: auto;
+    background-color:rgba(0, 128, 128, 0.7);
+    border-radius: 50px;
+}
+
+footer p, h3 {
+    color: black;
+}
+
+.footer-img1 {
+    display: inline-block;
+    height: 100px;
+    width: 100px;
+    background-image: url(../img/monitor.jpg);
+    background-size: cover;
+    border-radius: 50%;
+}
+
+.footer-img2 {
+    display: inline-block;
+    height: 100px;
+    width: 100px;
+    background-image: url(../img/graph.jpg);
+    background-size: cover;
+    border-radius: 50%;
+}
+
+footer h3 {
+    visibility: hidden;
+}
+
+footer > div:hover {
+    opacity: 20%;
+}
